--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -131,7 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="libs\fmt\src\fmt_format.cc" />
+    <ClCompile Include="libs\fmt\src\format.cc" />
     <ClCompile Include="libs\imgui\backends\imgui_impl_glfw.cpp" />
     <ClCompile Include="libs\imgui\backends\imgui_impl_vulkan.cpp" />
     <ClCompile Include="libs\imgui\imgui.cpp" />
