Asset browser converting, more misc

--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -122,8 +122,11 @@
     <ClCompile Include="src\game\asset_browser.cpp" />
     <ClCompile Include="src\game\asset_editor.cpp" />
     <ClCompile Include="src\game\components.cpp" />
+    <ClCompile Include="src\game\enemy.cpp" />
     <ClCompile Include="src\game\map_editor.cpp" />
     <ClCompile Include="src\game\systems.cpp" />
+    <ClCompile Include="src\game\tile.cpp" />
+    <ClCompile Include="src\game\tower.cpp" />
     <ClCompile Include="src\gui.cpp" />
     <ClCompile Include="src\h_impl.cpp" />
     <ClCompile Include="src\input.cpp" />
@@ -299,6 +302,7 @@
     <ClInclude Include="src\game\asset_editor.hpp" />
     <ClInclude Include="src\game\enemy.hpp" />
     <ClInclude Include="src\game\general.hpp" />
+    <ClInclude Include="src\game\tile.hpp" />
     <ClInclude Include="src\game\tower.hpp" />
     <ClInclude Include="src\hash.hpp" />
     <ClInclude Include="src\id_ptr.hpp" />
