--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -122,7 +122,9 @@
     <ClCompile Include="src\game\asset_browser.cpp" />
     <ClCompile Include="src\game\asset_editor.cpp" />
     <ClCompile Include="src\game\components.cpp" />
+    <ClCompile Include="src\game\consumer.cpp" />
     <ClCompile Include="src\game\enemy.cpp" />
+    <ClCompile Include="src\game\map.cpp" />
     <ClCompile Include="src\game\map_editor.cpp" />
     <ClCompile Include="src\game\spawner.cpp" />
     <ClCompile Include="src\game\stat.cpp" />
@@ -303,6 +305,7 @@
     <ClInclude Include="libs\vuk\src\ToIntegral.hpp" />
     <ClInclude Include="src\game\asset_browser.hpp" />
     <ClInclude Include="src\game\asset_editor.hpp" />
+    <ClInclude Include="src\game\consumer.hpp" />
     <ClInclude Include="src\game\enemy.hpp" />
     <ClInclude Include="src\game\general.hpp" />
     <ClInclude Include="src\game\map.hpp" />
